exercices/lfd259/7/s_07/newservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: secondapp
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    example: second
  sessionAffinity: None
status:
  loadBalancer: { }
