exercices/lfd259/7/s_07/service_first.yaml
apiVersion: v1
kind: Service
metadata:
  name: secondapp
  labels:
    run: my-nginx
spec:
  ports:
    - port: 80
  type: NodePort
  selector:
    example: second
